--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,9 @@
 name: GitHub Classroom Workflow
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 permissions:
   checks: write
@@ -10,14 +13,18 @@ permissions:
 jobs:
   build:
     name: Autograding
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         cache: [false]
     steps:
       - uses: actions/checkout@v2
-      - name: Rspd Python Assignment Report
-        uses: konsumgandalf/rspd-python-assignment-report@v1.0.0
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: 'david_schmidt_privat@outlook.com'
+          password: 'Skywalker2001?'
+      - uses: konsumgandalf/rspd-python-assignment-report@v1.1.0
         with:
           api_url: 'http://example-api.com/submission/github'
           repositoryUrl: 'git://github.com/OTH-Digital-Skills/lab-04-mario-angie_123'
