--- a/action.yml
+++ b/action.yml
@@ -19,5 +19,5 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'Dockerfile'
-  entrypoint: '/entrypoint.sh'
+  image: 'python:3.9'
+  entrypoint: '/bin/bash'
