--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,8 +27,8 @@ jobs:
           repository: 'OTH-Digital-Skills/lab-04-mario-angie_123'
       - name: Run script file
         run: |
-          chmod +x ./grade.sh
-          ./grade.sh
+          chmod +x grade.sh
+            ./grade.sh
         shell: bash
         env:
           API_URL: 'http://host.docker.internal:3000/api/submission/github'
