--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,5 @@ runs:
   steps:
     - run: echo Hello ${{ inputs.api_url }}.
       shell: bash
-    - run: chmod +x grade.sh
-            ./grade.sh
+    - run: chmod +x ${{ github.action_path }}/grade.sh && ${{ github.action_path }}/grade.sh
       shell: bash
