--- a/action.yml
+++ b/action.yml
@@ -22,3 +22,8 @@ runs:
   steps:
     - run: chmod +x ${{ github.action_path }}/grade.sh && ${{ github.action_path }}/grade.sh
       shell: bash
+      env:
+        API_URL: ${{ inputs.api_url }}
+        REPO_URL: ${{ inputs.repositoryUrl }}
+        REPO: ${{ inputs.repository }}
+        ACTOR: ${{ inputs.actor }}
