--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ runs:
     - run: chmod +x ${{ github.action_path }}/setup.sh && ${{ github.action_path }}/setup.sh
       shell: bash
     - run: chmod +x ${{ github.action_path }}/grade.sh && ${{ github.action_path }}/grade.sh
-      shell: bash
+      shell: bashss
       env:
         API_URL: ${{ inputs.api_url }}
         REPO_URL: ${{ inputs.repositoryUrl }}
