--- a/action.yml
+++ b/action.yml
@@ -22,8 +22,8 @@ runs:
   steps:
     - run: chmod +x ${{ github.action_path }}/setup.sh && ${{ github.action_path }}/setup.sh
       shell: bash
-    - run: chmod +x ${{ github.action_path }}/grade.sh && ${{ github.action_path }}/grade.sh
-      shell: bash
+    - run: python -m pytest --json-report -v --json-report-indent=2
+      shell: python
     - run: chmod +x ${{ github.action_path }}/api-request.py && ${{ github.action_path }}/api-request.py
       shell: bash
       env:
