--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ runs:
       shell: bash
     - run: chmod +x ${{ github.action_path }}/api-request.py && ${{ github.action_path }}/api-request.py
       shell: bash
-      if: always
+      if: always()
       env:
         API_URL: ${{ inputs.api_url }}
         REPO_URL: ${{ inputs.repositoryUrl }}
